re #19: Read key metadata from image http://www.assembla.com/spaces/photoorganizer/tickets/19